<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_primary90"
    android:backgroundTint="@color/background"
    tools:context=".viewmodel.SignUp">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="193dp"
        android:layout_height="71dp"
        android:text="@string/signup"
        android:textAlignment="center"
        android:textColor="#120464"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122" />

    <EditText
        android:id="@+id/editTextText45"
        android:layout_width="379dp"
        android:layout_height="75dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@android:drawable/button_onoff_indicator_off"
        android:ems="10"
        android:hint="@string/hint1"
        android:inputType="text"
        android:paddingStart="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.257" />

    <EditText
        android:id="@+id/editTextText47"
        android:layout_width="380dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@android:drawable/button_onoff_indicator_off"
        android:ems="10"
        android:hint="@string/hint2"
        android:inputType="text"
        android:paddingStart="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.405" />

    <EditText
        android:id="@+id/editTextText46"
        android:layout_width="379dp"
        android:layout_height="73dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@android:drawable/button_onoff_indicator_off"
        android:ems="10"
        android:hint="@string/hint3"
        android:inputType="text"
        android:paddingStart="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547" />

    <Button
        android:id="@+id/continueBtn"
        android:layout_width="225dp"
        android:layout_height="71dp"
        android:backgroundTint="#01073E"
        android:text="@string/b1"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.83" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="172dp"
        android:layout_height="46dp"
        android:text="@string/Already"
        android:textColor="#2B2A2A"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.217"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673" />

    <TextView
        android:id="@+id/textView2login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginEnd="116dp"
        android:text="@string/l1"
        android:textColor="#031373"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.652" />

</androidx.constraintlayout.widget.ConstraintLayout>