<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:backgroundTint="@color/background"
    tools:context=".viewmodel.Signin">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="191dp"
        android:layout_height="80dp"
        android:text="@string/signin"
        android:textAlignment="center"
        android:textColor="#022376"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.165" />

    <EditText
        android:id="@+id/editTextText47"
        android:layout_width="387dp"
        android:layout_height="76dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@android:drawable/button_onoff_indicator_off"
        android:ems="10"
        android:hint="@string/hint2"
        android:inputType="text"
        android:paddingStart="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345" />

    <EditText
        android:id="@+id/editTextText46"
        android:layout_width="387dp"
        android:layout_height="81dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:background="@android:drawable/button_onoff_indicator_off"
        android:ems="10"
        android:hint="@string/hint3"
        android:inputType="text"
        android:paddingStart="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/gray"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.485" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="232dp"
        android:layout_height="63dp"
        android:backgroundTint="#0B0354"
        android:text="@string/signin"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693" />

</androidx.constraintlayout.widget.ConstraintLayout>